# cr2tt

./: .gitignore  LICENSE  README.md  pyproject.toml  rdf_reification_convert.py
docs/: RDFReificationConvertFlow.puml  RDFReificationConvertModes.puml  RDFReificationConvertStructure.puml  README.md
examples/: README.md  asserted_annotation.ttl  blank_reifier.ttl  external_reference.ttl  invalid_incomplete.ttl  nested_reification.ttl  output_asserted_annotated_triple_expanded.ttl  output_blank_reifying_triples.ttl  output_external_reference_explicit_reifier.ttl  output_invalid_lenient.ttl  output_nested_explicit_reifier.ttl  output_simple_annotated_with_assert_missing.ttl  output_simple_explicit_reifier.ttl  output_simple_triple_terms.ttl  simple_classic.ttl
tests/: test_rdf_reification_convert.py
tests/golden/: annotated_triple.ttl  explicit_reifier.ttl  nested_reifying_triples.ttl  triple_terms.ttl
