[project]
name = "old-reif-to-new-reif"
version = "0.1.0"
description = "Convert classic RDF reification to RDF 1.2 Turtle reification syntax."
requires-python = ">=3.10"
dependencies = [
  "rdflib>=6.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "ruff>=0.11",
]

[tool.setuptools]
py-modules = ["rdf_reification_convert"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
extend-select = ["I"]
